@@ -22,6 +22,7 @@ from werkzeug.utils import cached_property, escape
 from werkzeug.debug.console import Console
 from werkzeug._compat import range_type, PY2, text_type, string_types, \
     to_native, to_unicode
+from werkzeug.filesystem import get_filesystem_encoding
 
 
 _coding_re = re.compile(br'coding[:=]\s*([-\w.]+)')
@@ -383,7 +384,7 @@ class Frame(object):
         # if it's a file on the file system resolve the real filename.
         if os.path.isfile(fn):
             fn = os.path.realpath(fn)
-        self.filename = to_unicode(fn, sys.getfilesystemencoding())
+        self.filename = to_unicode(fn, get_filesystem_encoding())
         self.module = self.globals.get('__name__')
         self.loader = self.globals.get('__loader__')
         self.code = tb.tb_frame.f_code
@@ -466,7 +467,8 @@ class Frame(object):
 
         if source is None:
             try:
-                f = open(self.filename, mode='rb')
+                f = open(to_native(self.filename, get_filesystem_encoding()),
+                         mode='rb')
             except IOError:
                 return []
             try:
